# gstreasy

./: .flake8  .gitignore  README.md  pyproject.toml  run.sh  tox.ini  user_code.py
examples/: fake_stamping_press.py  webcam.py
src/gstreasy/: __init__.py  pipeline.py  utils.py  wrapped_caps.py
tests/: test_pipeline.py
